--- a/css/style.css
+++ b/css/style.css
@@ -3,10 +3,10 @@
 }
 
 
-.image img{
+/* .image img{
     padding : 0px 850px 0px 0px;
     width: 50px; 
-}  
+}   */
 
   .navbar{
     position: fixed;
@@ -14,33 +14,7 @@
     z-index: 100;
     padding : 12px;
   }
-  .navbar ul {
-    display: flex;
-    list-style: none;
-  }
-
-  .navbar ul li {
-    margin: 0px 8px;
-    justify-content: center;
-  }
-
   
-
-  .navbar ul li a{
-    text-decoration: none;
-    padding: 10px 20px;
-    font-family: "Comic Sans MS";
-    font-size: 18px;
-    color: #940eee;
-    transition: background-color 0.2s;
-    border-radius: 50px;
-  }
-
-  .navbar ul li a:hover {
-    background-color: #940eee;
-    transition: background-color 0.4s;
-    color: #fdfdfd;
-  }
 
   .home-page{
       background-image: url("img/home.jpg");
@@ -48,7 +22,7 @@
   
 
   .intro{
-      font-size: 40px;
+      font-size: 32px;
     padding : 280px 620px;
     color : #940eee; 
   }
@@ -114,34 +88,7 @@
     padding: 0px 0px 50px 0px;
   }
 
-  .contact-details{
-    text-align: center;
-  }
-
-  .contact-head{
-    text-align: center;
-    color :#940eee;
-    font-size: 80px;
-    padding: 0px 0px 50px 0px;
-  }
-
-  .last-lines{
-    font-size: 20px;
-    padding : 20px 0px 30px 0px;
-  }
-
-  .email{
-    padding: 20px;
-  }
-
-
-  .copyright{
-    font-size: 15px;
-    padding: 30px 0px 10px 0px;
-  }
-  .social-accounts a{
-    padding : 0px 20px;
-  }
+  
 
 
 .home-page{
@@ -159,4 +106,53 @@
 .projects-page{
     height: 700px;
 }
+.projects-text{
+  font-size: 30px;
+  padding: 0px 0px 50px 0px;
+}
 
+#project-thumbnail{
+  width: 350px ;
+  height : auto;
+}
+
+.project-heading , .post-info-category{
+  text-align: center;
+}
+
+.projects .project-item:hover .part-img img{
+  transform : scale(1.05);
+  opacity : 0.8;
+}
+.project-heading{
+  padding: 20px;
+}
+
+.contact-details{
+  text-align: center;
+}
+
+.contact-head{
+  text-align: center;
+  color :#940eee;
+  font-size: 80px;
+  padding: 150px 0px 30px 0px;
+}
+
+.last-lines{
+  font-size: 20px;
+  padding : 20px 0px 30px 0px;
+}
+
+.email{
+  padding: 20px;
+}
+
+
+.copyright{
+  font-size: 15px;
+  padding: 30px 0px 10px 0px;
+}
+.social-accounts a{
+  padding : 0px 20px;
+}
